welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
	var bouge: Color = 0
                           ^